# graph

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Todo.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph.sln  graph_info.json
.github/workflows/: build_cmake.yml  test.yml
adaptor/: vov_adaptor.hpp
adaptors/adj_list/: adj_list.hpp
adaptors/aolos/: aolos.hpp
adaptors/aos/: aos.hpp
adaptors/bgl17/: aolos.hpp  aos.hpp  compressed.hpp  disjoint_set.hpp  edge_list.hpp  spmv_range.hpp  util_par.hpp  vovos.hpp
adaptors/bgl17/attic/: compressed.hpp
adaptors/bgl17/checkpoint/: compressed.hpp  var_compressed.hpp
adaptors/bgl17_src/: degree.hpp  graph_base.hpp  mmio.hpp  neighbor_range.hpp  plain_range.hpp  reverse.hpp
adaptors/compressed/: compressed.hpp
adaptors/vovos/: vovos.hpp
cmake/: CompilerWarnings.cmake  Conan.cmake
data/: flowtest.mtx
docker/: Dockerfile.gcc10.2  build.bash
include/graph/: adjlist_fwd_vl.hpp  compressed_adj_array.hpp  directed_adjacency_array.hpp  directed_adjacency_vector.hpp  graph.hpp  graph2.hpp  graph_access.hpp  graph_fwd.hpp  graph_utility.hpp  ordered_pair.hpp  tag_invoke.hpp  undirected_adj_list.hpp  undirected_adjacency_list.hpp
include/graph/adaptor/: adacency_adaptor.hpp
include/graph/algorithm/: articulation_poiints.hpp  boykov_kolmogorov.hpp  boykov_kolmogorov3.hpp  components.hpp  connected_component.hpp  dag_based_mis.hpp  dijkstra.hpp  jones_plassmann_coloring.hpp  k_core.hpp  max_flow.hpp  mis.hpp  page_rank.hpp  shortest_paths.hpp  transitive_closure.hpp  triangle_count.hpp  utils.hpp
include/graph/algorithms/: boykov_kolmogorov2.hpp  connected_component.hpp  dag_based_mis.hpp  degree.hpp  jones_plassmann_coloring.hpp  (+4 more)
src/: CMakeLists.txt  compressed.hpp  dag_range.hpp  edge_list.hpp  mmio.hpp  neighbor_range.hpp  new_dfs_range.hpp  random_range.hpp  spmv_range.hpp  timer.hpp  util.hpp  vovos.hpp
src/algorithms/: connected_component.hpp  k_core.hpp  mis.hpp
src/backlog/: adj.hpp  dimacs_io.hpp
src/checkpoint/: aos.hpp  attributed.hpp  graph_base.hpp  mmio.hpp  timer.hpp  util.hpp  vov.hpp
src/detail/: numeric.hpp
test/: CMakeLists.txt  adjacency_test.cpp  aolos_test.cpp  aos_test.cpp  bfs_test_0.cpp  bk.cpp  compressed_test.cpp  connected_component_test.cpp  data_routes.cpp  data_routes.hpp  dijkstra_test_0.cpp  edge_list_test.cpp  edge_list_test_1.cpp  idxsoa_1.cpp  jp_coloring_test.cpp  kcore_test.cpp  max_flow_test.cpp  mis_test.cpp  mmio_test.cpp  new_dfs_test.cpp  page_rank_test.cpp  pch.h  plain_range_test.cpp  random_test_0.cpp  simple_graph.hpp  spanning_tree_test.cpp  spmm_test.cpp  stream_test_0.cpp  test.cpp  test.vcxproj  test.vcxproj.filters  test_accessors.cpp  test_accessors_dav.cpp  test_accessors_simple_adl.cpp  test_accessors_simple_member.cpp  test_accessors_simple_rng.cpp  test_accessors_ual.cpp  test_accessors_vol_adl.cpp  test_caa_graph.cpp  test_concomp.cpp  (+16 more)
test/backlog/: matvec_test_0.cpp
test/common/: abstract_test.hpp  test_header.hpp
test/include/graph/: graph_fwd.hpp
test/include/graph/algorithms/: page_rank.hpp  spMatspMat.hpp
test/include/graph/iterators/: bfs_edge_range.hpp  dfs_range.hpp
(+26 files in other folders)
